# ChangeLog for app-text/docbook-sgml
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/docbook-sgml/ChangeLog,v 1.13 2004/07/30 03:08:29 tgall Exp $

  29 Jul 2004; Tom Gall <tgall@gentoo.org> docbook-sgml-1.0.ebuild:
  stable on ppc64, bug #55676

  15 Jul 2004; Tom Gall <tgall@gentoo.org> docbook-sgml-1.0.ebuild:
  added ~ppc64, bug #55676

  14 Apr 2004; Stephen P. Becker <geoman@gentoo.org> docbook-sgml-1.0.ebuild:
  Marked stable on mips.

  13 Mar 2004; Stephen P. Becker <geoman@gentoo.org> docbook-sgml-1.0.ebuild:
  Added ~mips keyword.

  07 Jan 2004; <agriffis@gentoo.org> docbook-sgml-1.0.ebuild:
  stable on ia64

  23 Jan 2003; Aron Griffis <agriffis@gentoo.org> docbook-sgml-1.0.ebuild :
  Add alpha to KEYWORDS

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*docbook-sgml-1.0 (1 Feb 2002)

  04 Jul 2003; Guy Martin <gmsoft@gentoo.org> docbook-sgml-1.0.ebuild :
  Added hppa to KEYWORDS.

  01 Aug 2002; Mark Guertin <gerk@gentoo.org> :
  Added ppc to keywords

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.