@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/docbook-sgml/docbook-sgml-1.0.ebuild,v 1.24 2004/07/30 03:08:29 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/docbook-sgml/docbook-sgml-1.0.ebuild,v 1.25 2004/10/18 16:35:49 usata Exp $
 
 DESCRIPTION="A helper package for sgml docbook"
 LICENSE="GPL-2"
@@ -12,7 +12,7 @@ KEYWORDS="x86 ppc sparc alpha hppa amd64 ia64 mips ppc64"
 RDEPEND="app-text/sgml-common app-text/openjade
 	>=app-text/docbook-dsssl-stylesheets-1.64
 	>=app-text/docbook-sgml-utils-0.6.6
-	=app-text/docbook-sgml-dtd-3.0-r1
-	=app-text/docbook-sgml-dtd-3.1-r1
-	=app-text/docbook-sgml-dtd-4.0-r1
-	=app-text/docbook-sgml-dtd-4.1-r1"
+	~app-text/docbook-sgml-dtd-3.0
+	~app-text/docbook-sgml-dtd-3.1
+	~app-text/docbook-sgml-dtd-4.0
+	~app-text/docbook-sgml-dtd-4.1"
